# spark_flow

./: README.md  pyproject.toml
dags/: .movies_dynamic_json.py.swp  fishml.py  line_notify.py  movies_dynamic_json.py  pyspark_movie.py
py/: pasing_parquet.py  select_parquet.py
src/spark_flow/: movies_dynamic_json_m.py  pyspark_m.py
