[project]
name = "spark_flow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "tqdm>=4.66.5",
    "requests>=2.32.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
